--- a/index.html
+++ b/index.html
@@ -22,49 +22,24 @@
             <th>Resistente a</th>
             <th>Inmune a</th>
         </tr>
-        <tr>
-            <td>Normal</td>
-            <td>Lucha</td>
-            <td>Ninguno</td>
-            <td>Ninguno</td>
-            <td>Fantasma</td>
-        </tr>
-        <tr>
-            <td>Fuego</td>
-            <td>Agua, Roca, Tierra</td>
-            <td>Planta, Hielo, Bicho, Acero</td>
-            <td>Fuego, Planta, Hielo, Bicho, Acero, Hada</td>
-            <td>Ninguno</td>
-        </tr>
-        <tr>
-            <td>Agua</td>
-            <td>Eléctrico, Planta</td>
-            <td>Fuego, Tierra, Roca</td>
-            <td>Fuego, Agua, Hielo, Acero</td>
-            <td>Ninguno</td>
-        </tr>
-        <tr>
-            <td>Eléctrico</td>
-            <td>Tierra</td>
-            <td>Agua, Volador</td>
-            <td>Eléctrico, Volador, Acero</td>
-            <td>Ninguno</td>
-        </tr>
-        <tr>
-            <td>Planta</td>
-            <td>Fuego, Hielo, Veneno, Volador, Bicho</td>
-            <td>Agua, Tierra, Roca</td>
-            <td>Agua, Planta, Eléctrico, Tierra</td>
-            <td>Ninguno</td>
-        </tr>
-        <tr>
-            <td>Hielo</td>
-            <td>Fuego, Lucha, Roca, Acero</td>
-            <td>Planta, Tierra, Volador, Dragón</td>
-            <td>Hielo</td>
-            <td>Ninguno</td>
-        </tr>
-        <!-- Añade más filas aquí con el resto de los tipos -->
+        <tr><td>Normal</td><td>Lucha</td><td>Ninguno</td><td>Ninguno</td><td>Fantasma</td></tr>
+        <tr><td>Fuego</td><td>Agua, Roca, Tierra</td><td>Planta, Hielo, Bicho, Acero</td><td>Fuego, Planta, Hielo, Bicho, Acero, Hada</td><td>Ninguno</td></tr>
+        <tr><td>Agua</td><td>Eléctrico, Planta</td><td>Fuego, Tierra, Roca</td><td>Fuego, Agua, Hielo, Acero</td><td>Ninguno</td></tr>
+        <tr><td>Eléctrico</td><td>Tierra</td><td>Agua, Volador</td><td>Eléctrico, Volador, Acero</td><td>Ninguno</td></tr>
+        <tr><td>Planta</td><td>Fuego, Hielo, Veneno, Volador, Bicho</td><td>Agua, Tierra, Roca</td><td>Agua, Planta, Eléctrico, Tierra</td><td>Ninguno</td></tr>
+        <tr><td>Hielo</td><td>Fuego, Lucha, Roca, Acero</td><td>Planta, Tierra, Volador, Dragón</td><td>Hielo</td><td>Ninguno</td></tr>
+        <tr><td>Lucha</td><td>Volador, Psíquico, Hada</td><td>Normal, Hielo, Roca, Siniestro, Acero</td><td>Bicho, Roca, Siniestro</td><td>Ninguno</td></tr>
+        <tr><td>Veneno</td><td>Tierra, Psíquico</td><td>Planta, Hada</td><td>Planta, Lucha, Veneno, Bicho, Hada</td><td>Ninguno</td></tr>
+        <tr><td>Tierra</td><td>Agua, Planta, Hielo</td><td>Fuego, Eléctrico, Veneno, Roca, Acero</td><td>Veneno, Roca</td><td>Eléctrico</td></tr>
+        <tr><td>Volador</td><td>Eléctrico, Hielo, Roca</td><td>Planta, Lucha, Bicho</td><td>Planta, Lucha, Bicho</td><td>Tierra</td></tr>
+        <tr><td>Psíquico</td><td>Bicho, Fantasma, Siniestro</td><td>Lucha, Veneno</td><td>Lucha, Psíquico</td><td>Ninguno</td></tr>
+        <tr><td>Bicho</td><td>Fuego, Volador, Roca</td><td>Planta, Psíquico, Siniestro</td><td>Planta, Lucha, Tierra</td><td>Ninguno</td></tr>
+        <tr><td>Roca</td><td>Agua, Planta, Lucha, Tierra, Acero</td><td>Fuego, Hielo, Volador, Bicho</td><td>Normal, Fuego, Veneno, Volador</td><td>Ninguno</td></tr>
+        <tr><td>Fantasma</td><td>Fantasma, Siniestro</td><td>Psíquico, Fantasma</td><td>Veneno, Bicho</td><td>Normal, Lucha</td></tr>
+        <tr><td>Dragón</td><td>Hielo, Dragón, Hada</td><td>Dragón</td><td>Fuego, Agua, Eléctrico, Planta</td><td>Ninguno</td></tr>
+        <tr><td>Siniestro</td><td>Lucha, Bicho, Hada</td><td>Psíquico, Fantasma</td><td>Fantasma, Siniestro</td><td>Psíquico</td></tr>
+        <tr><td>Acero</td><td>Fuego, Lucha, Tierra</td><td>Hielo, Roca, Hada</td><td>Normal, Planta, Hielo, Volador, Psíquico, Bicho, Roca, Dragón, Acero, Hada</td><td>Veneno</td></tr>
+        <tr><td>Hada</td><td>Veneno, Acero</td><td>Lucha, Dragón, Siniestro</td><td>Lucha, Bicho, Siniestro</td><td>Dragón</td></tr>
     </table>
 </body>
 </html>
